@@ -1,3 +1,8 @@
+2017-09-11  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/background/try_xpath_background.js:
+	Define genericListener.listeners.showAllResults function.
+
 2017-09-10  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/scripts/try_xpath_content.js:
